# CitationNetwork

./: .gitignore  README.md  c2e.csv  casetoecli.py  citations.ttl  graph_import.py  index.html  inspect-data.json  main.py  materialize_chains.py  metadata.json  metadata.yml  output.json  parse_citations.py  pyproject.toml  queries.js  results.json  sparqlEngine.js  styles.css  test.py  topics.sparql  utils.py  valid_files.txt
sparnatural-form/: cit-config.ttl  form.json  query.json  sparnatural-form.css  sparnatural-form.js
