[project]
name = "privacytopic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "datasette>=0.65.2",
    "lxml>=6.0.2",
    "pandas>=3.0.2",
    "platformdirs>=4.9.4",
    "requests>=2.33.1",
    "requests-cache>=1.3.1",
    "sparqlwrapper>=2.0.0",
    "tqdm>=4.67.3",
]
